devorg/force-app/main/default/objects/Housing_invoice__c/Housing_invoice__c.object-meta.xml
<CustomObject>
    <label>Housing_invoice</label>
    <nameField>
        <label>Housing_invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Housing_invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>