devorg/force-app/main/default/objects/Housing_invoice__c/fields/Bill_amount__c.field-meta.xml
<CustomField>
    <fullName>Bill_amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bill amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>