devorg/force-app/main/default/objects/Housing_invoice__c/fields/Electricity_bill__c.field-meta.xml
<CustomField>
    <fullName>Electricity_bill__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Electricity bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>