devorg/force-app/main/default/objects/Housing_invoice__c/fields/Electricity_meter_reading__c.field-meta.xml
<CustomField>
    <fullName>Electricity_meter_reading__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Electricity_meter_reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>