devorg/force-app/main/default/objects/Housing_invoice__c/fields/Gas_meter_reading__c.field-meta.xml
<CustomField>
    <fullName>Gas_meter_reading__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gas_meter_reading</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>