devorg/force-app/main/default/objects/Housing_invoice__c/fields/Housing_user__c.field-meta.xml
<CustomField>
    <fullName>Housing_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Housing_user</label>
    <referenceTo>Housing_user__c</referenceTo>
    <relationshipLabel>Housing_invoices</relationshipLabel>
    <relationshipName>Housing_invoices</relationshipName>
    <type>Lookup</type>
</CustomField>